[tool.poetry]
authors = ["Alejandro Gutiérrez <agutierrez@stec.es>", "Raúl Marín <rmarin@sftec.es>"]
description = ""
exclude = ["workbook"]
name = "pyvium-core"
packages = [{include = "pyvium_core"}]
readme = "README.md"
version = "0.1.33"

[tool.poetry.dependencies]
python = "^3.11"
cffi = "^1.15.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
