[tool.poetry]
authors = [
    "Alejandro Gutiérrez <agutierrez@stec.es>",
    "Raúl Marín <rmarin@sftec.es>",
]
description = "A tiny Python wrapper around the <Software development driver DLL> for IviumSoft."
exclude = ["docs", "tests"]
homepage = "https://github.com/SF-Tec/pyvium"
keywords = ["ivium", "iviumsoft", "ivium software", "ivium compactstat"]
repository = "https://github.com/SF-Tec/pyvium"
license = "Apache-2.0"
name = "pyvium"
packages = [{ include = "pyvium" }]
readme = "README.md"
version = "0.1.10beta"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: Apache Software License',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.11"
cffi = "^1.15.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
